--- a/tests/views/index.ejs
+++ b/tests/views/index.ejs
@@ -14,11 +14,11 @@
 
     <form action="/" method="POST" class="mt-5 space-y-4">
         <label class="block">Email:
-            <input type="text" class="p-2 border rounded border-gray-300" value="test@gmail.com">
+            <input name="email" type="text" class="p-2 border rounded border-gray-300" value="test@gmail.com">
         </label>
 
         <label class="block">Username:
-            <input type="text" class="p-2 border rounded border-gray-300" value="test@gmail.com">
+            <input name="username" type="text" class="p-2 border rounded border-gray-300" value="test@gmail.com">
         </label>
 
         <button type="submit" class="py-2 px-3 bg-blue-500 text-white rounded">LOGIN</button>
